added register customer func
