# api-gateway/api/router.go
@@ -5,6 +5,7 @@ import (
 	config "github.com/barber_shop/api-gateway/config"
 	"github.com/barber_shop/api-gateway/pkg/logger"
 	services "github.com/barber_shop/api-gateway/services"
+	repo "github.com/barber_shop/api-gateway/storage/repo"
 	"github.com/gin-gonic/gin"
 
 	swaggerFiles "github.com/swaggo/files"     // swagger embed files
@@ -17,6 +18,7 @@ import (
 type Option struct {
 	Conf           config.Config
 	Logger         logger.Logger
+	RedisRepo      repo.RedisRepositoryStorage
 	ServiceManager services.IServiceManager
 }
 
@@ -32,6 +34,7 @@ func New(option Option) *gin.Engine {
 
 	handlerV1 := v1.New(&v1.HandlerV1Config{
 		Logger:         option.Logger,
+		Redis:   option.RedisRepo,
 		ServiceManager: option.ServiceManager,
 		Cfg:            option.Conf,
 	})
@@ -39,11 +42,14 @@ func New(option Option) *gin.Engine {
 	router.Static("/media", "./media")
 
 	api := router.Group("/v1")
-	
+
 	api.POST("/customer/create", handlerV1.CreateCustomer)
 	api.PUT("/customer/update/:id", handlerV1.UpdateCustomer)
 	api.GET("/customer/get/:id", handlerV1.GetCustomerByID)
 	api.GET("/customers/list", handlerV1.GetListCustomers)
+	api.DELETE("/customer/delete/:id", handlerV1.DeleteCustomer)
+
+	api.POST("/customer/register", handlerV1.RegisterCustomer)
 
 	api.POST("/file-upload", handlerV1.UploadFile)
 
